Fix positions alignment.

--- a/_sass/rigoblock/partials/_community.scss
+++ b/_sass/rigoblock/partials/_community.scss
@@ -150,6 +150,7 @@
         @include rmargin-top(20);
         border: 1px solid $blue;
         display: flex;
+        align-items: center;
         @include mobile {
           height: 42px;
           margin-top: 10px;
@@ -173,6 +174,7 @@
           border-left: 1px solid $blue;
           width: 46px;
           padding: 10px;
+          font-size: 0;
         }
       }
     }
